--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
   - 1.8.x
 
 before_script:
-  - go get -t -v github.com/smallnest/gen/...
+  - go get -t -v github.com/shuvigoss/gen/...
 
 script:
  - go build .
